fix: fix paddings and alignment of brazil map

--- a/frontend/src/components/pages/home/about/about.module.css
+++ b/frontend/src/components/pages/home/about/about.module.css
@@ -23,6 +23,7 @@
   flex-grow: 1;
   max-width: 1250px;
   padding: 50px;
+  padding-bottom: 20px;
   flex-direction: column;
 }
 
@@ -37,7 +38,7 @@
   width: 100%;
   display: flex;
   font-family: LinearGrotesk-Black, sans-serif;
-  margin-bottom: 5vh;
+  margin-bottom: min(5vh, 50px);
 }
 
 .headerTitleDetails {
@@ -76,7 +77,7 @@
 }
 
 .storyText {
-  margin-top: 10vh;
+  margin-top: min(10vh, 50px);
   margin-left: 3vw;
   text-align: justify;
   font-family: LinearGrotesk-Bold, sans-serif;
@@ -85,7 +86,7 @@
 
 .storyLargeText {
   color: #fff;
-  margin-left: 3vw;
+  margin-left: min(3vw, 50px);
   text-align: left;
   font-family: LinearGrotesk-Bold, sans-serif;
   font-size: 25px;
@@ -133,7 +134,7 @@
 
 @media (max-width: 1170px) {
   .storyText {
-    margin-top: 5vh;
+    margin-top: min(5vh, 70px);
   }
   .storyContainer {
     max-width: 660px;
